fix alignment of lists?

--- a/style.css
+++ b/style.css
@@ -90,6 +90,10 @@
   margin-right: 10px;
 }
 
+.new-articles {
+  padding-left: 13%;
+}
+
 .directory {
   border-radius: 10px;
   padding: 10px;
